# firefly-settings

./: .gitignore  Cargo.toml  README.md  Taskfile.yml  firefly.toml
src/: background.rs  languages.rs  main.rs  pages.rs  rendering.rs  state.rs  themes.rs  translations.rs  updating.rs
