[package]
name = "settings"
version = "0.1.0"
edition = "2024"

[dependencies]
firefly-rust = { version = "0.12.0", features = ["alloc", "talc", "sudo"] }
firefly-types = "0.8.1"

# https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true    # Automatically strip symbols from the binary.
opt-level = "z" # Optimize for size.
lto = true      # Enable link-time optimization
