[package]
name = "settings"
version = "0.2.0"
edition = "2024"

[dependencies]
firefly-rust = { version = "0.13.0", features = ["alloc", "talc", "sudo"] }
firefly-types = "0.8.1"
firefly-ui = { path = "../firefly-ui" }

# https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true    # Automatically strip symbols from the binary.
opt-level = "z" # Optimize for size.
lto = true      # Enable link-time optimization
